Implemented error report for update issues